--- a/assets/css/styles-2.css
+++ b/assets/css/styles-2.css
@@ -5,10 +5,10 @@
  * Website: http://themes.3rdwavemedia.com/
  * Twitter: @3rdwave_themes
 */
-/* style-2.css */
+/* Default */
 /* ======= Base ======= */
 body {
-  font-family: 'Lato', arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: #444444;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
@@ -20,12 +20,12 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 700;
-  color: #b4ca65;
+  color: #0b9b8c;
 }
 a {
-  color: #b4ca65;
+  color: #0b9b8c;
   -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
   -ms-transition: all 0.4s ease-in-out;
@@ -33,7 +33,7 @@ a {
 }
 a:hover {
   text-decoration: underline;
-  color: #a1bb41;
+  color: #0e98c5;
 }
 .btn,
 a.btn {
@@ -41,7 +41,7 @@ a.btn {
   -moz-transition: all 0.4s ease-in-out;
   -ms-transition: all 0.4s ease-in-out;
   -o-transition: all 0.4s ease-in-out;
-  font-family: 'Montserrat', arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
   padding: 8px 16px;
   font-weight: bold;
 }
@@ -55,34 +55,34 @@ a.btn:focus {
 }
 a.btn-cta-primary,
 .btn-cta-primary {
-  background: #607026;
-  border: 1px solid #607026;
+  background: #253238;
+  border: 1px solid #253238;
   color: #fff;
-  font-weight: 600;
+  font-weight: 500;
   text-transform: uppercase;
 }
 a.btn-cta-primary:hover,
 .btn-cta-primary:hover {
-  background: #4f5d20;
-  border: 1px solid #4f5d20;
+  background: #253238;
+  border: 1px solid #253238;
   color: #fff;
 }
 a.btn-cta-secondary,
 .btn-cta-secondary {
-  background: #dd7c4f;
-  border: 1px solid #dd7c4f;
-  color: #fff;
-  font-weight: 600;
+  background: #ceebe8;
+  border: 1px solid #ceebe8;
+  color: #253238;
+  font-weight: 500;
   text-transform: uppercase;
 }
 a.btn-cta-secondary:hover,
 .btn-cta-secondary:hover {
-  background: #d96c3a;
-  border: 1px solid #d96c3a;
-  color: #fff;
+  background: #ceebe8;
+  border: 1px solid #ceebe8;
+  color: #253238;
 }
 .text-highlight {
-  color: #607026;
+  color: #074f66;
 }
 .offset-header {
   padding-top: 90px;
@@ -93,7 +93,7 @@ pre code {
 /* ======= Header ======= */
 .header {
   padding: 10px 0;
-  background: #b4ca65;
+  background: #253238;
   color: #fff;
   position: fixed;
   width: 100%;
@@ -106,7 +106,7 @@ pre code {
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
 }
 .header.navbar-fixed-top .logo a {
-  color: #b4ca65;
+  color: #0b9b8c;
 }
 .header.navbar-fixed-top .main-nav .nav .nav-item a {
   color: #666666;
@@ -123,7 +123,7 @@ pre code {
   text-decoration: none;
 }
 .header .main-nav button {
-  background: #607026;
+  background: #074f66;
   color: #fff !important;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -146,14 +146,14 @@ pre code {
 .header .main-nav .nav .nav-item {
   font-weight: normal;
   margin-right: 30px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 .header .main-nav .nav .nav-item.active a {
-  color: #b4ca65;
+  color: #0b9b8c;
   background: none;
 }
 .header .main-nav .nav .nav-item a {
-  color: #809633;
+  color: #0b9b8c;
   -webkit-transition: none;
   -moz-transition: none;
   -ms-transition: none;
@@ -162,7 +162,7 @@ pre code {
   padding: 15px 10px;
 }
 .header .main-nav .nav .nav-item a:hover {
-  color: #607026;
+  color: #0b9b8c;
   background: none;
 }
 .header .main-nav .nav .nav-item a:focus {
@@ -174,24 +174,26 @@ pre code {
   background: none;
 }
 .header .main-nav .nav .nav-item.active {
-  color: #b4ca65;
+  color: #0b9b8c;
 }
 .header .main-nav .nav .nav-item.last {
   margin-right: 0;
 }
 /* ======= Promo Section ======= */
 .promo {
-  background: #b4ca65;
+  background: #0b9b8c;
   color: #fff;
   padding-top: 150px;
 }
 .promo .title {
   font-size: 98px;
-  color: #607026;
+  color: #253238;
   margin-top: 0;
+  font-weight: 300;
 }
 .promo .title .highlight {
-  color: #dd7c4f;
+  color: #ceebe8;
+  font-weight: 500;
 }
 .promo .intro {
   font-size: 28px;
@@ -207,19 +209,19 @@ pre code {
 .promo .meta {
   margin-top: 120px;
   margin-bottom: 30px;
-  color: #809633;
+  color: #253238;
 }
 .promo .meta li {
   margin-right: 15px;
 }
 .promo .meta a {
-  color: #809633;
+  color: #253238;
 }
 .promo .meta a:hover {
-  color: #607026;
+  color: #253238;
 }
 .promo .social-media {
-  background: #90a93a;
+  background: #253238;
   padding: 10px 0;
   margin: 0 auto;
 }
@@ -237,7 +239,7 @@ pre code {
   background: #f5f5f5;
 }
 .about .title {
-  color: #607026;
+  color: #253238;
   margin-top: 0;
   margin-bottom: 60px;
 }
@@ -257,36 +259,36 @@ pre code {
 }
 .about .item .icon-holder .fa {
   font-size: 24px;
-  color: #607026;
+  color: #253238;
 }
 .about .item .content {
   padding-left: 60px;
 }
 .about .item .content .sub-title {
   margin-top: 0;
-  color: #607026;
+  color: #253238;
   font-size: 18px;
 }
 /* ======= Features Section ======= */
 .features {
   padding: 80px 0;
-  background: #b4ca65;
+  background: #0b9b8c;
   color: #fff;
 }
 .features .title {
-  color: #607026;
+  color: #253238;
   margin-top: 0;
   margin-bottom: 30px;
 }
 .features a {
-  color: #607026;
+  color: #253238;
 }
 .features a:hover {
-  color: #3f4a19;
+  color: #253238;
 }
 .features .feature-list li {
   margin-bottom: 10px;
-  color: #607026;
+  color: #253238;
 }
 .features .feature-list li .fa {
   margin-right: 5px;
@@ -298,7 +300,7 @@ pre code {
   background: #f5f5f5;
 }
 .docs .title {
-  color: #607026;
+  color: #253238;
   margin-top: 0;
   margin-bottom: 30px;
 }
@@ -340,7 +342,7 @@ pre code {
 .license .title {
   margin-top: 0;
   margin-bottom: 60px;
-  color: #607026;
+  color: #253238;
 }
 .license .license-inner {
   max-width: 800px;
@@ -374,8 +376,8 @@ pre code {
   background-clip: padding-box;
 }
 .license .cta-container .speech-bubble {
-  background: #fefefd;
-  color: #607026;
+  background: #ceebe8;
+  color: #253238;
   padding: 30px;
   margin-bottom: 30px;
   position: relative;
@@ -399,7 +401,7 @@ pre code {
   height: 0;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-top: 10px solid #fefefd;
+  border-top: 10px solid #d6f3fc;
 }
 .license .cta-container .icon-holder {
   margin-bottom: 15px;
@@ -413,7 +415,7 @@ pre code {
 /* ======= Contact Section ======= */
 .contact {
   padding: 80px 0;
-  background: #b4ca65;
+  background: #0b9b8c;
   color: #fff;
 }
 .contact .contact-inner {
@@ -421,7 +423,7 @@ pre code {
   margin: 0 auto;
 }
 .contact .title {
-  color: #607026;
+  color: #253238;
   margin-top: 0;
   margin-bottom: 30px;
 }
@@ -429,10 +431,10 @@ pre code {
   margin-bottom: 60px;
 }
 .contact a {
-  color: #607026;
+  color: #253238;
 }
 .contact a:hover {
-  color: #3f4a19;
+  color: #253238;
 }
 .contact .author-message {
   position: relative;
@@ -457,8 +459,8 @@ pre code {
 }
 .contact .author-message .speech-bubble {
   margin-left: 155px;
-  background: #aec65a;
-  color: #607026;
+  background: #10b2e7;
+  color: #074f66;
   padding: 30px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -471,7 +473,7 @@ pre code {
   position: relative;
 }
 .contact .author-message .speech-bubble .sub-title {
-  color: #607026;
+  color: #074f66;
   font-size: 16px;
   margin-top: 0;
   margin-bottom: 30px;
@@ -489,19 +491,19 @@ pre code {
   height: 0;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
-  border-right: 10px solid #aec65a;
+  border-right: 10px solid #10b2e7;
 }
 .contact .author-message .speech-bubble .source {
   margin-top: 30px;
 }
 .contact .author-message .speech-bubble .source a {
-  color: #607026;
+  color: #074f66;
 }
 .contact .author-message .speech-bubble .source .title {
-  color: #90a93a;
+  color: #0c86ae;
 }
 .contact .info .sub-title {
-  color: #a1bb41;
+  color: #253238;
   margin-bottom: 30px;
   margin-top: 0;
 }
@@ -520,7 +522,7 @@ pre code {
 }
 .contact .social-icons a {
   display: inline-block;
-  background: #90a93a;
+  background: #253238;
   width: 48px;
   height: 48px;
   text-align: center;
@@ -537,7 +539,7 @@ pre code {
   float: left;
 }
 .contact .social-icons a:hover {
-  background: #d15e28;
+  background: #e6ad14;
 }
 .contact .social-icons a .fa {
   color: #fff;
@@ -550,7 +552,7 @@ pre code {
 /* ======= Footer ======= */
 .footer {
   padding: 15px 0;
-  background: #3f4a19;
+  background: #253238;
   color: #fff;
 }
 .footer .copyright {
