--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -440,28 +440,28 @@ pre code {
   margin-right: 5px;
   color: #303f9f;
 }
-/* ======= Usefull Links Section ======= */
-.usefull_links {
+/* ======= Useful Links Section ======= */
+.useful_links {
   padding: 80px 0;
   background: #f5f5f5;
   color: #303f9f;
 }
-.usefull_links .title {
+.useful_links .title {
   color: #253238;
   margin-top: 0;
   margin-bottom: 30px;
 }
-.usefull_links a {
+.useful_links a {
   color: #253238;
 }
-.usefull_links a:hover {
+.useful_links a:hover {
   color: #253238;
 }
-.usefull_links .feature-list li {
+.useful_links .feature-list li {
   margin-bottom: 10px;
   color: #253238;
 }
-.usefull_links .feature-list li .fa {
+.useful_links .feature-list li .fa {
   margin-right: 5px;
   color: #303f9f;
 }
