--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -118,7 +118,7 @@ pre code {
   padding-top: 10px;
 }
 .header .logo a {
-color: #fff;
+  color: #fff;
 }
 .header .logo a:hover {
   text-decoration: none;
@@ -163,7 +163,7 @@ color: #fff;
   padding: 15px 10px;
 }
 .header .main-nav .nav .nav-item a:hover {
-  color: #fff;
+  color: #d35400;
   background: transparent;
 }
 .header .main-nav .nav .nav-item a:focus {
@@ -183,8 +183,8 @@ color: #fff;
 }
 /* ======= Promo Section ======= */
 .promo {
-  background-image: url("C1.png");
-  color: #000;
+  background: #2c3e50;
+  color: #d35400;
   padding-top: 150px;
 }
 .promo .title {
@@ -198,20 +198,12 @@ color: #fff;
   font-weight: 500;
 }
 
-/*.promo.logo{
-  max-width:50%; 
-  max-height:50%;
-  height:auto;
-  width:auto;
-  margin:auto;
-  display:auto;
-  background-size:auto;
-}*/
 .promo .intro {
   font-size: 28px;
   max-width: 680px;
   margin: 0 auto;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
+  margin-top: 50px;
 }
 .promo .btns .btn {
   margin-right: 15px;
@@ -219,7 +211,7 @@ color: #fff;
   padding: 8px 30px;
 }
 .promo .meta {
-  margin-top: 120px;
+  margin-top: 80px;
   margin-bottom: 30px;
   color: #FAFAFA;
 }
@@ -230,10 +222,10 @@ color: #fff;
   color: #FAFAFA;
 }
 .promo .meta a:hover {
-  color: #253238;
+  color: #d35400;
 }
 .promo .social-media {
-  background: #253238;
+  background: #2c3e50;
   padding: 10px 0;
   margin: 0 auto;
 }
@@ -260,6 +252,7 @@ color: #fff;
   margin: 0 auto;
   margin-bottom: 60px;
 }
+
 .about .item {
   position: relative;
   margin-bottom: 30px;
@@ -280,6 +273,9 @@ color: #fff;
 }
 .about .item .content {
   padding-left: 60px;
+}
+.about .item a:hover {
+  color: #d35400;
 }
 .about .item .content .sub-title {
   margin-top: 0;
